article: Introdução ao Git

--- a/archives.html
+++ b/archives.html
@@ -14,6 +14,7 @@
         <header id="banner" class="body">
                 <h1><a href="./">Carlos Cardoso </a></h1>
                 <nav><ul>
+                    <li><a href="./category/source-control.html">Source Control</a></li>
                     <li><a href="./category/webdev.html">WebDev</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -21,6 +22,8 @@
 <h1>Archives for Carlos Cardoso</h1>
 
 <dl>
+    <dt>Wed 13 May 2015</dt>
+    <dd><a href="./introducao-git.html">Introdução Git</a></dd>
     <dt>Fri 03 December 2010</dt>
     <dd><a href="./django-performance-tips.html">Django Performance tips</a></dd>
 </dl>
