--- a/authors.html
+++ b/authors.html
@@ -14,6 +14,7 @@
         <header id="banner" class="body">
                 <h1><a href="./">Carlos Cardoso </a></h1>
                 <nav><ul>
+                    <li><a href="./category/source-control.html">Source Control</a></li>
                     <li><a href="./category/webdev.html">WebDev</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -21,7 +22,7 @@
 <section id="content" class="body">
     <h1>Authors on Carlos Cardoso</h1>
     <ul>
-        <li><a href="./author/carlos-cardoso.html">Carlos Cardoso</a> (1)</li>
+        <li><a href="./author/carlos-cardoso.html">Carlos Cardoso</a> (2)</li>
     </ul>
 </section>
 
