article: Ninja da linha de comando

--- a/archives.html
+++ b/archives.html
@@ -14,6 +14,7 @@
         <header id="banner" class="body">
                 <h1><a href="./">Carlos Cardoso </a></h1>
                 <nav><ul>
+                    <li><a href="./category/shell.html">Shell</a></li>
                     <li><a href="./category/source-control.html">Source Control</a></li>
                     <li><a href="./category/webdev.html">WebDev</a></li>
                 </ul></nav>
@@ -22,6 +23,8 @@
 <h1>Archives for Carlos Cardoso</h1>
 
 <dl>
+    <dt>Mon 25 May 2015</dt>
+    <dd><a href="./command-line-ninja.html">Command Line Ninja</a></dd>
     <dt>Wed 13 May 2015</dt>
     <dd><a href="./introducao-git.html">Introdução Git</a></dd>
     <dt>Fri 03 December 2010</dt>
