--- a/categories.html
+++ b/categories.html
@@ -14,11 +14,13 @@
         <header id="banner" class="body">
                 <h1><a href="./">Carlos Cardoso </a></h1>
                 <nav><ul>
+                    <li><a href="./category/shell.html">Shell</a></li>
                     <li><a href="./category/source-control.html">Source Control</a></li>
                     <li><a href="./category/webdev.html">WebDev</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <ul>
+    <li><a href="./category/shell.html">Shell</a></li>
     <li><a href="./category/source-control.html">Source Control</a></li>
     <li><a href="./category/webdev.html">WebDev</a></li>
 </ul>
