--- a/introducao-git.html
+++ b/introducao-git.html
@@ -14,6 +14,7 @@
         <header id="banner" class="body">
                 <h1><a href="./">Carlos Cardoso </a></h1>
                 <nav><ul>
+                    <li><a href="./category/shell.html">Shell</a></li>
                     <li class="active"><a href="./category/source-control.html">Source Control</a></li>
                     <li><a href="./category/webdev.html">WebDev</a></li>
                 </ul></nav>
