--- a/tags.html
+++ b/tags.html
@@ -14,6 +14,7 @@
         <header id="banner" class="body">
                 <h1><a href="./">Carlos Cardoso </a></h1>
                 <nav><ul>
+                    <li><a href="./category/shell.html">Shell</a></li>
                     <li><a href="./category/source-control.html">Source Control</a></li>
                     <li><a href="./category/webdev.html">WebDev</a></li>
                 </ul></nav>
@@ -22,8 +23,10 @@
 <section id="content" class="body">
     <h1>Tags for Carlos Cardoso</h1>
     <ul>
+        <li><a href="./tag/command-line.html">Command Line</a> (1)</li>
         <li><a href="./tag/django.html">Django</a> (1)</li>
         <li><a href="./tag/git.html">Git</a> (1)</li>
+        <li><a href="./tag/history.html">History</a> (1)</li>
         <li><a href="./tag/performance.html">Performance</a> (1)</li>
     </ul>
 </section>
