--- a/archives.html
+++ b/archives.html
@@ -2,33 +2,37 @@
 <html lang="en">
 <head>
         <meta charset="utf-8" />
-        <title>Carlos Cardoso</title>
-        <link rel="stylesheet" href="./theme/css/main.css" />
+        <title>/dev/me</title>
+        <link rel="stylesheet" href="/theme/css/main.css" />
+        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="/dev/me Atom Feed" />
 
         <!--[if IE]>
-            <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+            <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="./">Carlos Cardoso </a></h1>
+                <h1><a href="/">/dev/me </a></h1>
                 <nav><ul>
-                    <li><a href="./category/shell.html">Shell</a></li>
-                    <li><a href="./category/source-control.html">Source Control</a></li>
-                    <li><a href="./category/webdev.html">WebDev</a></li>
+                    <li><a href="/category/hacking.html">Hacking</a></li>
+                    <li><a href="/category/podcasts.html">Podcasts</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
-<h1>Archives for Carlos Cardoso</h1>
+<h1>Archives for /dev/me</h1>
 
 <dl>
+    <dt>Wed 11 November 2015</dt>
+    <dd><a href="/podcast-developer-tea.html">Podcast - Developer Tea</a></dd>
+    <dt>Wed 11 November 2015</dt>
+    <dd><a href="/vagrant.html">Vagrant</a></dd>
     <dt>Mon 25 May 2015</dt>
-    <dd><a href="./command-line-ninja.html">Command Line Ninja</a></dd>
+    <dd><a href="/command-line-ninja.html">Command Line Ninja</a></dd>
     <dt>Wed 13 May 2015</dt>
-    <dd><a href="./introducao-git.html">Introdução Git</a></dd>
+    <dd><a href="/introducao-git.html">Introdução Git</a></dd>
     <dt>Fri 03 December 2010</dt>
-    <dd><a href="./django-performance-tips.html">Django Performance tips</a></dd>
+    <dd><a href="/django-performance-tips.html">Django Performance tips</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
@@ -44,6 +48,7 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
+                            <li><a href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="#">Another social link</a></li>
