--- a/authors.html
+++ b/authors.html
@@ -2,28 +2,28 @@
 <html lang="en">
 <head>
         <meta charset="utf-8" />
-        <title>Carlos Cardoso - Authors</title>
-        <link rel="stylesheet" href="./theme/css/main.css" />
+        <title>/dev/me - Authors</title>
+        <link rel="stylesheet" href="/theme/css/main.css" />
+        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="/dev/me Atom Feed" />
 
         <!--[if IE]>
-            <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+            <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="./">Carlos Cardoso </a></h1>
+                <h1><a href="/">/dev/me </a></h1>
                 <nav><ul>
-                    <li><a href="./category/shell.html">Shell</a></li>
-                    <li><a href="./category/source-control.html">Source Control</a></li>
-                    <li><a href="./category/webdev.html">WebDev</a></li>
+                    <li><a href="/category/hacking.html">Hacking</a></li>
+                    <li><a href="/category/podcasts.html">Podcasts</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
-    <h1>Authors on Carlos Cardoso</h1>
+    <h1>Authors on /dev/me</h1>
     <ul>
-        <li><a href="./author/carlos-cardoso.html">Carlos Cardoso</a> (3)</li>
+        <li><a href="/author/carlos-cardoso.html">Carlos Cardoso</a> (5)</li>
     </ul>
 </section>
 
@@ -40,6 +40,7 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
+                            <li><a href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="#">Another social link</a></li>
